--- a/fileverse/static/css/mini-files/mini-table.css
+++ b/fileverse/static/css/mini-files/mini-table.css
@@ -12,11 +12,11 @@
 }
 
 .table thead:after {
-    content:'';
-    position:absolute;
+    content: '';
+    position: absolute;
     left: 0;
     bottom: 0;
-    width:100%;
+    width: 100%;
     border-bottom: 3px solid #222222;
 }
 
@@ -41,14 +41,15 @@
     border-bottom: thin solid #ddd;
     cursor: pointer;
 }
-.table thead tr th:last-child{
+
+.table thead tr th:last-child {
     text-align: right;
     cursor: pointer;
     font-size: 18px;
 }
 
-.table thead tr th:first-of-type, 
-.table tbody tr td:first-of-type{
+.table thead tr th:first-of-type,
+.table tbody tr td:first-of-type {
     display: none;
 }
 
@@ -62,7 +63,7 @@
 }
 
 table tbody tr td button,
-.file-table-action{
+.file-table-action {
     background-color: transparent;
     border: none;
     outline: none;
@@ -82,7 +83,7 @@ table tbody tr td:last-child {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
-.table-menu{
+.table-menu {
     width: 30px;
     height: 30px;
     background-image: radial-gradient(circle, black 10px, transparent 11px);
@@ -95,71 +96,35 @@ table tbody tr td:last-child {
     text-align: left;
 }
 
-/*
-
-.file-entries-container {
-    width: 60%;
-    padding: 10px;
-}
-
-.file-entry {
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-
-    border: 1px solid lightslategray;
-    border-radius: 20px;
-
-
+.search-bar {
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    
-    margin-top: 10px;
-    margin-bottom: 10px;
+    width: 70%;
+    margin: 10px;
+    border-radius: 5px;
+    outline: auto;
+    position: sticky;
 }
 
-
-.file-entry__summary {
-    width: 50%;
-    padding: 1rem;
-}
-
-.file-entry__filename {
-    display: block;
-    font-size: 1.2rem;
-    margin-bottom: 10px;
-    overflow: hidden;
-    white-space:nowrap;
-      text-overflow: ellipsis;
-}
-
-.file-entry__details {
-    font-size: 0.6rem;
-    color: #616161;
-}
-
-
-
-.file-entry__actions button {
-    display: inline-block;
-    vertical-align: baseline;
-
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-
+.search-bar input[type="text"] {
+    width: 100%;
+    padding: 10px 20px;
     border: none;
     outline: none;
-    background: transparent;
-    padding: 0px;
-
 }
 
-.file-entry__actions button svg {
-    width: 100%;
-    height: 100%;
-    
+.search-bar button:first-of-type{
+    background-color: white;
+    border: none;
+    cursor: pointer;
+    width: 40px;
+    font-size: large;
+}
+
+.search-bar button:last-of-type {
+    padding: 10px 20px;
+    border-radius: 0px;
+    background-color: #0D6EFD;
+    color: white;
+    border: none;
     cursor: pointer;
 }
-*/
